# cocktail-maker

./: .dockerignore  .gitattributes  .gitignore  404.html  Dockerfile  README.md  biome.json  codeql.sh  index.html  mkdocs.yml  objects.inv  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  refresh_pyc.sh  tailwind.config.js  tsconfig.app.json  vite.config.ts
.github/workflow/: deploy.yaml
.github/workflows/: deploy.yaml
about/: index.html
api-reference/: index.html
app/: gunicorn.conf.py  main.py
app/auth/: __init__.py  encryption.py  jwt.py  public_api.py  roles.py
app/database/: __init__.py  connector.py  query.py  query_assist.py  table.py
app/database/sql/: get_spirits_metadata.sql  get_spirits_metadata_from_sqlite.sql  insert_spirits_metadata.sql
app/middleware/: brotli.py
app/model/: __init__.py  cocktail.py  etc.py  ingredient.py  ingredients.py  liqueur.py  response.py  spirits.py  user.py  validation.py
app/query/: metadata.py  queries.py  query_child.py  query_parents.py
app/utils/: __init__.py  encryption.py  etc.py  logger.py  times.py
compose/: docker-compose-full-example.yaml
compose/authentication/: docker-compose.yaml
compose/cocktail-maker/: docker-compose.yaml  nginx.conf
compose/cocktail-maker-background/: docker-compose.yaml
compose/mongodb/: docker-compose.yaml
compose/mongodb/k8s/: mongodb-cm0-configmap.yaml  mongodb-deployment.yaml  mongodb-service.yaml
compose/nginx/: docker-compose.yaml  nginx.conf
data/sample/: sample_data.xlsx
docs/: about.md  api-reference.md  index.md  user-guide.md
gh-pages/: 404.html
gh-pages/assets/: index-DAx9pLt0.js  index-DAx9pLt0.js.map
schema/: spirits.schema.json
site/search/: search_index.json
src/: App.css  App.tsx  index.css  main.tsx
src/components/: CocktailGuide.tsx  Dashboard.tsx  ImageUpload.tsx  IngredientRegister.tsx  LiqueurRegister.tsx  SpiritsRegister.tsx  ThemeToggle.tsx  index.ts
src/contexts/: ThemeContext.tsx
src/hooks/: useApi.ts  useMetadata.ts  useTheme.ts
src/types/: forms.ts
temp/: cocktail-recipe.json
tests/: conftest.py  test_encryption.py  test_error_response.py  test_health_check.py  test_liqueur_delete.py
user-guide/: index.html
