[project]
name = "cocktail-maker"
version = "0.1.0"
description = "A cocktail recipe API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=44,<45",
    "fastapi[standard]>=0.115",
    "motor[zstd]>=3.5.1,<4",
    "orjson>=3",
    "pillow>=11,<12",
    "pre-commit>=4,<5",
    "pyjwt>=2,<3",
    "sqlmodel>=0.0.22",
    "structlog>=25,<26",
]

[dependency-groups]
dev = [
    "pyright[nodejs]>=1,<2",
    "pytest>=8,<9",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py313"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "ASYNC", "PL", "FAST", "RUF", "ANN"]
fixable = ["ALL"]
unfixable = []
ignore = ["E501", "ANN401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = true
known-local-folder = ["app"]
