[project]
name = "cocktail-maker"
version = "0.1.0"
description = "A cocktail recipe API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=44,<45",
    "fastapi[standard]>=0.115",
    "gunicorn[setproctitle]>=23.0.0",
    "motor[zstd]>=3.5.1,<4",
    "orjson>=3",
    "pillow>=11,<12",
    "pyjwt>=2,<3",
    "secure>=1.0.1",
    "secweb>=1.18.1",
    "sqlmodel>=0.0.22",
    "structlog>=25,<26",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "pre-commit>=4,<5",
    "pyright[nodejs]>=1,<2",
    "pytest>=8,<9",
    "pytest-dotenv>=0.5.2",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py313"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "ASYNC", "PL", "FAST", "RUF", "ANN"]
fixable = ["ALL"]
unfixable = []
ignore = ["E501", "ANN401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = true
known-local-folder = ["app"]

[tool.ty.src] # ty is alpha state, just trying it out
root = "./app"

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "ignore"
possibly-unbound-attribute = "error"
possibly-unbound-import = "error"
index-out-of-bounds = "ignore"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "standard"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
pythonpath = ["app"]
env_files = ["app/.env"]
